--- a/scripts/setup.yml
+++ b/scripts/setup.yml
@@ -84,7 +84,7 @@
       - tcpdump
       - vim
       - wget
-    when: ansible_os_family == "RedHat"
+    when: ansible_os_family == "RedHat" or ansible_os_family == "Debian" 
 
   - name: Install dependencies for VirtualBox Guest Additions (RedHat)
     yum:
@@ -100,7 +100,7 @@
       - make
       - perl
     when:
-      - ansible_os_family == "RedHat"
+      - ansible_os_family == "RedHat" or ansible_os_family == "Debian"
       - ansible_virtualization_type == "virtualbox"
 
   - name: Mount VBoxGuestAdditions.iso
@@ -133,5 +133,5 @@
       name: open-vm-tools
       state: latest
     when: 
-      - ansible_os_family == "RedHat"
+      - ansible_os_family == "RedHat" or ansible_os_family == "Debian"
       - ansible_virtualization_type == "VMware"
